Configure Vercel routing and fix database connectivity

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
+MONGO_URI=mongodb://127.0.0.1:27017/EduStar
 PORT=5001
-MONGO_URI=mongodb://localhost:27017/EduStar
 JWT_SECRET=edugen_jwt_super_secret_key_2025
 JWT_REFRESH_SECRET=edugen_refresh_secret_2025
 JWT_EXPIRE=7d
@@ -11,3 +11,5 @@ EMAIL_PORT=587
 EMAIL_USER=noreply@edugen.com
 EMAIL_PASS=your_email_password
 GEMINI_API_KEY=AIzaSyBdj_Lp42VtlCE637TWvo1RPkBwHISGG0Q
+# PRODUCTION_MONGO_URI=mongodb+srv://edugen:edugen%401107@cluster0.thzbxkg.mongodb.net/EduStar?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://edugen:edugen%401107@cluster0.thzbxkg.mongodb.net/?edugen=Cluster0
